Enhance Next.js example for mod-engine with comprehensive features
- Added a complete Next.js example demonstrating the mod-engine library's capabilities for RPG item modification systems.
- Included a detailed README with installation instructions, features, and usage examples.
- Implemented various components for item building, evaluation results, and prebuilt examples.
- Configured ESLint and Tailwind CSS for improved development experience and styling.
- Created scripts for starting the Next.js example and a demo to verify functionality.

This commit significantly enriches the mod-engine ecosystem by providing a practical, interactive demonstration of its features.

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
+    "start": "node scripts/start-nextjs-example.cjs",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:types": "tsd",
