Enhance documentation and Next.js example integration
- Updated the .gitignore file to include build artifacts for documentation and the Next.js example, ensuring a cleaner repository.
- Modified the GitHub Actions workflow to build and export the Next.js example for static hosting, improving deployment processes.
- Enhanced the Next.js demo documentation to provide a direct link to the embedded demo, making it more accessible for users.
- Updated the Next.js configuration to support static export and proper base path handling for deployment under Docusaurus.

These changes improve the overall documentation structure and streamline the deployment of the Next.js example, enhancing user experience and accessibility.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,10 +39,24 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
-        run: cd docs && npm ci
+        run: |
+          npm ci --workspaces=false
+          cd docs && npm ci
 
       - name: Build documentation
-        run: cd docs && npm run build
+        run: |
+          # Build and export the Next.js example for static hosting
+          cd examples/nextjs-example
+          npm ci
+          npm run build
+          npm run export
+          cd ../..
+          # Place the exported app under docs static to serve at /mod-engine/demo/
+          rm -rf docs/static/demo
+          mkdir -p docs/static/demo
+          cp -R examples/nextjs-example/out/* docs/static/demo/
+          # Build the Docusaurus site
+          cd docs && npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
