Update package.json scripts and enhance documentation
- Added a "prepare" script to the package.json for building the project before publishing.
- Updated various documentation files to reflect changes in method names and improve clarity, including renaming `custom()` to `apply()` and updating condition handling terminology.
- Enhanced examples and validation sections to align with the new API structure and improve user understanding.

These changes streamline the development process and enhance the overall documentation quality, making it easier for users to navigate and utilize the Mod-Engine effectively.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "start": "node scripts/start-nextjs-example.cjs",
+    "prepare": "npm run build",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:types": "tsd",
@@ -35,7 +36,44 @@
     "attributes",
     "engine",
     "type-safe",
-    "deterministic"
+    "deterministic",
+    "rules-engine",
+    "rule-engine",
+    "configuration-engine",
+    "config-validation",
+    "schema-validation",
+    "stacking",
+    "stacking-rules",
+    "unique-stacking",
+    "conditional-logic",
+    "conditions",
+    "condition-builder",
+    "rpg",
+    "game",
+    "game-stats",
+    "game-balance",
+    "buffs",
+    "debuffs",
+    "financial-modeling",
+    "pricing",
+    "discounts",
+    "operations",
+    "custom-operations",
+    "math-operations",
+    "precedence",
+    "priority",
+    "typesafe",
+    "type-inference",
+    "generics",
+    "builder-pattern",
+    "fluent-api",
+    "dsl",
+    "snapshot",
+    "serialization",
+    "analytics",
+    "tracing",
+    "explainability",
+    "audit"
   ],
   "author": "",
   "license": "MIT",
