--- a/examples/nextjs-example/package.json
+++ b/examples/nextjs-example/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Next.js example demonstrating mod-engine RPG item modification system",
   "scripts": {
+    "prebuild": "npm --prefix ../../ run build",
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
