Update README and package.json for improved clarity and functionality
- Replaced the logo in the README with a new image for better representation of the Mod Engine.
- Added a preinstall script in the Next.js example's package.json to ensure the build process runs before installation, enhancing the setup experience for users.

These changes improve the documentation and streamline the installation process for the Next.js example, making it more user-friendly.

--- a/examples/nextjs-example/package.json
+++ b/examples/nextjs-example/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Next.js example demonstrating mod-engine RPG item modification system",
   "scripts": {
+    "preinstall": "npm --prefix ../../ run build",
     "prebuild": "npm --prefix ../../ run build",
     "dev": "next dev",
     "build": "next build",
