Update Next.js example package.json export script
- Modified the "export" script in the Next.js example's package.json to include a message indicating the completion of the static export process and the location of the output files. This change enhances user feedback during the build process.

This update improves the clarity of the export process for users, ensuring they are informed when the static export is complete and where to find the generated files.

--- a/examples/nextjs-example/package.json
+++ b/examples/nextjs-example/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm --prefix ../../ run build",
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
+    "export": "next build && echo 'Static export complete. Files available in ./out'",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
